fix overflow issue on ios

--- a/src/styles/containers/_protocol-list.scss
+++ b/src/styles/containers/_protocol-list.scss
@@ -1,5 +1,6 @@
 .protocol-list {
   height: 100%;
+  width: 100%;
 
   &--empty {
     display: flex;
